--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
     <title>Mila Scardigno</title>
   </head>
   <body>
-    <div id="app"></div>
+    <h1>Mila Scardigno</h1>
+    <p>Hi there!</p>
+    <!-- <div id="app"></div> -->
     <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
